--- a/views/index.html
+++ b/views/index.html
@@ -4,11 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    
+    <title>To Do List in Node and Mongo</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <h5>Lista de Tarefas</h5>
+
+    <div class="container titulo"><h5>Lista de Tarefas</h5></div>
+    
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="top_30">
+                    <input type="text" id="add-item" class="form-control" placeholder="Titulo da Tarefa">
+                </div>
+                <div class="top_30">
+                    <select id="select-box" class="form-control"><option value="">SELECIONE</option></select>
+                </div>
+
+                <div class="top_30">
+                    <textarea id="" cols="30" class="w100 form-control" placeholder="Descreva sua tarefa"></textarea>
+                </div>
+
+                <div class="top_30">
+                    <button id="btn-add-item" class="btn btn-success w100">Add</button>
+                </div>
+                
+            </div>
+            <div class="col-lg-6">
+                Container Right
+            </div>
+        </div>
+    </div>
+    <script src="/js/functions.js"></script>
 </body>
 </html>
 
